WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
169906
Resource Load Statistics: Fix partitioning bug for client-side cookie access
https://bugs.webkit.org/show_bug.cgi?id=169906
Summary
Resource Load Statistics: Fix partitioning bug for client-side cookie access
John Wilander
Reported
2017-03-20 21:02:05 PDT
The partitioning list should be checked for client-side cookie access.
Attachments
Patch
(10.95 KB, patch)
2017-03-20 21:16 PDT
,
John Wilander
no flags
Details
Formatted Diff
Diff
Patch
(11.28 KB, patch)
2017-03-20 21:31 PDT
,
John Wilander
no flags
Details
Formatted Diff
Diff
Patch
(13.72 KB, patch)
2017-03-20 22:26 PDT
,
John Wilander
no flags
Details
Formatted Diff
Diff
Patch
(13.26 KB, patch)
2017-03-21 16:45 PDT
,
John Wilander
no flags
Details
Formatted Diff
Diff
Patch
(13.22 KB, patch)
2017-03-22 11:32 PDT
,
John Wilander
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2017-03-20 21:03:12 PDT
<
rdar://problem/31164456
>
John Wilander
Comment 2
2017-03-20 21:16:15 PDT
Created
attachment 304988
[details]
Patch
John Wilander
Comment 3
2017-03-20 21:31:04 PDT
Created
attachment 304989
[details]
Patch
John Wilander
Comment 4
2017-03-20 21:50:36 PDT
I realized I can simplify this and make it more efficient. In essence, fold these two code paths into one which would have avoided the bug from the beginning. New patch coming up.
John Wilander
Comment 5
2017-03-20 22:26:31 PDT
Created
attachment 304990
[details]
Patch
Brent Fulgham
Comment 6
2017-03-21 09:06:16 PDT
Comment on
attachment 304990
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=304990&action=review
Looks good -- please have Alex give final review.
> Source/WebCore/platform/network/cf/NetworkStorageSessionCFNet.cpp:120 > + auto domain = url.host();
Delete this line.
> Source/WebCore/platform/network/cf/NetworkStorageSessionCFNet.cpp:122 > + domain = topPrivatelyControlledDomain(domain);
Make this "auto domain = top...."
> Source/WebCore/platform/network/cf/NetworkStorageSessionCFNet.cpp:124 > + domain = url.host();
#else auto domain = url.host();
Alex Christensen
Comment 7
2017-03-21 16:09:03 PDT
Comment on
attachment 304990
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=304990&action=review
> Source/WebKit2/ChangeLog:17 > +2017-03-20 John Wilander <
wilander@apple.com
>
This has two ChangeLog entries.
John Wilander
Comment 8
2017-03-21 16:45:19 PDT
Created
attachment 305050
[details]
Patch
John Wilander
Comment 9
2017-03-21 16:47:00 PDT
Thanks for the review comments, Brent and Alex! I'll just let the patch go through an EWS build and then put it on the commit queue.
John Wilander
Comment 10
2017-03-21 16:50:05 PDT
Comment on
attachment 305050
[details]
Patch Adding to commit queue. Don't know what's up with EWS but the analysis seems to have been dropped.
WebKit Commit Bot
Comment 11
2017-03-22 11:12:05 PDT
Comment on
attachment 305050
[details]
Patch Rejecting
attachment 305050
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-01', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 305050, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: a9396d15124a3b355073e9b2cac25b706b5
r214262
= dd961cd4754677276d05cbdf98f7c6a25cc89142
r214263
= 86e77173f6c6125d25b9b58efb5a2f507881bd43
r214264
= 4011743cf6bfcc8528801fa32ec45fc9d20e3f64
r214265
= 00cf9f48b91a26af60292ed1cd25efb2864f3664
r214266
= 756915c25fcb57ddb4b94b8c936ebb0dface6d93 Done rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc First, rewinding head to replay your work on top of it... Fast-forwarded master to refs/remotes/origin/master. Full output:
http://webkit-queues.webkit.org/results/3388543
John Wilander
Comment 12
2017-03-22 11:32:33 PDT
Created
attachment 305113
[details]
Patch
John Wilander
Comment 13
2017-03-22 11:33:31 PDT
Let's see if EWS is in a better mood today.
WebKit Commit Bot
Comment 14
2017-03-22 12:43:28 PDT
Comment on
attachment 305113
[details]
Patch Clearing flags on attachment: 305113 Committed
r214270
: <
http://trac.webkit.org/changeset/214270
>
WebKit Commit Bot
Comment 15
2017-03-22 12:43:32 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug