Resource Load Statistics: Fix partitioning bug for client-side cookie access https://bugs.webkit.org/show_bug.cgi?id=169906 <rdar://problem/31164456>

Reviewed by Alex Christensen.

Source/WebCore:

The existing test case was expanded to cover this change.

* platform/network/NetworkStorageSession.h:
    Moved the two cookieStoragePartition() functions into the class.
    Also declared them const.
* platform/network/cf/NetworkStorageSessionCFNet.cpp:
(WebCore::NetworkStorageSession::cookieStoragePartition):
    Now checks whether it should partition or not.
(WebCore::getPartitioningDomain):
    Inline convenience function.
(WebCore::NetworkStorageSession::shouldPartitionCookies):
    Renamed since it now receives a top privately controlled domain
    instead of a host.
(WebCore::cookieStoragePartition): Deleted.
    This moved into NetworkStorageSession.
(WebCore::hostIsInDomain): Deleted.
    No longer needed since we generate the top privately controlled
    domain for both the resource and the partition.
(WebCore::NetworkStorageSession::shouldPartitionCookiesForHost): Deleted.
    Renamed WebCore::NetworkStorageSession::shouldPartitionCookies().
* platform/network/mac/CookieJarMac.mm:
(WebCore::cookiesInPartitionForURL):
    Now calls WebCore::NetworkStorageSession::cookieStoragePartition().
(WebCore::setCookiesFromDOM):
    Now calls WebCore::NetworkStorageSession::cookieStoragePartition().
* platform/network/mac/ResourceHandleMac.mm:
(WebCore::ResourceHandle::createNSURLConnection):
    Now calls WebCore::NetworkStorageSession::cookieStoragePartition().

Source/WebKit2:

* NetworkProcess/cocoa/NetworkDataTaskCocoa.mm:
(WebKit::NetworkDataTaskCocoa::NetworkDataTaskCocoa):
    This function no longer asks the NetworkStorageSession
    whether it should partition or not. That decision is
    now made as part of
    WebCore::NetworkStorageSession::cookieStoragePartition().
    The empty partition signals no partitioning.

LayoutTests:

* http/tests/loading/resourceLoadStatistics/partitioned-cookies-with-and-without-user-interaction-expected.txt:
* http/tests/loading/resourceLoadStatistics/resources/get-cookies.php:
    Now also outputs document.cookie client-side.


Canonical link: https://commits.webkit.org/186899@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@214270 268f45cc-cd09-0410-ab3c-d52691b4dbfc