LayoutTests/http/tests/loading/resourceLoadStatistics/resources/get-cookies.php
@@ -11,3 +11,7 @@ if(!isset($_COOKIE[$_GET["name2"]])) {
     echo "Received cookie named '" . $_GET["name2"] . "'.<br>";
 }
 ?>
+<p id="output"></p>
+<script>
+    document.getElementById("output").textContent = "Client-side document.cookie: " + document.cookie;
+</script>
